Доделал 2 и 3е краевое (матрица А - получается, b - нет)

--- a/Kurs_1.vcxproj.filters
+++ b/Kurs_1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Kurs_1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="MainProg.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRID.h">
