--- a/Kurs_1.vcxproj
+++ b/Kurs_1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Kurs_1.cpp" />
+    <ClCompile Include="MainProg.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRID.h" />
