Остановился на том моменте, что мне похоже нужен все же au Вектор b до сих пор непривльно считает

--- a/Kurs_1.vcxproj
+++ b/Kurs_1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Kurs_1.cpp" />
     <ClCompile Include="MainProg.cpp" />
+    <ClCompile Include="SLAEsolver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRID.h" />
