--- a/Kurs_1.vcxproj.filters
+++ b/Kurs_1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="MainProg.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="SLAEsolver.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRID.h">
