Нашаманил перед средой

--- a/Kurs_1.vcxproj.filters
+++ b/Kurs_1.vcxproj.filters
@@ -26,6 +26,21 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headFUN\TEST_num1.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="headFUN\TEST1.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="headFUN\TEST6x6.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="headFUN\TEST_kirpich.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="TESTS\TEST_lambda\TEST_lambda.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="GRID.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
