--- a/Kurs_1.vcxproj
+++ b/Kurs_1.vcxproj
@@ -133,6 +133,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GRID.h" />
+    <ClInclude Include="headFUN\TEST1.h" />
+    <ClInclude Include="headFUN\TEST6x6.h" />
+    <ClInclude Include="headFUN\TEST_kirpich.h" />
+    <ClInclude Include="headFUN\TEST_num1.h" />
+    <ClInclude Include="TESTS\TEST_lambda\TEST_lambda.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
