--- a/Kurs_1.vcxproj
+++ b/Kurs_1.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="headFUN\TEST6x6.h" />
     <ClInclude Include="headFUN\TEST_kirpich.h" />
     <ClInclude Include="headFUN\TEST_num1.h" />
+    <ClInclude Include="TESTS\TEST_aprox\TEST_aprox.h" />
     <ClInclude Include="TESTS\TEST_lambda\TEST_lambda.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
