--- a/Kurs_1.vcxproj.filters
+++ b/Kurs_1.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="GRID.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TESTS\TEST_aprox\TEST_aprox.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
